# volunteer_management_system_test

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.prod.sh
backend/: .env.example  conftest.py  manage.py  pyproject.toml
backend/accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/management/commands/: create_test_users.py  seed_demo.py
backend/applications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/compliance/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/core/: choices.py
backend/placements/: admin.py  models.py  serializers.py  urls.py  views.py
backend/staff_programs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/volunteers/: admin.py  models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
