[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
namespaces = false

[project]
name = "nhs_volunteer_management"
version = "0.0.2"
description = "Volunteer management backend (Django + DRF)"
readme = "README.md"
requires-python = ">=3.10"
#license = { text = "MIT" }

#authors = [
#  { name = "Natu Okubet", email = "" }
#]

dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "djangorestframework-simplejwt>=5.3",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "django-filter>=24.2",
  "drf-spectacular>=0.27",
  "gunicorn>=22.0",
  "django-split-settings>=1.3",
  "django-allauth>=0.63",
  "dj-rest-auth>=5.0",
  "django-cors-headers>=4.3",
  "authlib>=1.3"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.6",
  "mypy>=1.10",
]

test = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
]

#[project.urls]
#homepage = ""
#repository = ""

